make header sticky by scrolling down, update background-color on small screen, fix dependency vulnerability

--- a/oba-ui/src/styles.scss
+++ b/oba-ui/src/styles.scss
@@ -111,4 +111,9 @@
 
 }
 
+@media (max-width: 767px) {
+  .bg-sm-light {
+    background-color: $COLOR_LIGHT_GREY-10;
+  }
+}
 
