--- a/tpp-ui/src/styles.scss
+++ b/tpp-ui/src/styles.scss
@@ -105,3 +105,10 @@ a {
         justify-content: flex-start;
     }
 }
+
+
+@media (max-width: 767px) {
+    .bg-sm-light {
+        background-color: $light-grey-10;
+    }
+}
